--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = soft-delete
-version = 0.1
+version = 0.2
 description = A Django app that enables soft delete.
 long_description = file: README.md
-url = https://www.example.com/
+url = https://github.com/dimsamaras/soft-delete
 author = Dimitris Samaras
 author_email = dimitris.samaras@gmail.com
 license = BSD
